[gd_scene load_steps=5 format=3 uid="uid://y5bu584by1eo"]

[ext_resource type="Script" path="res://src/environment/scripts/OrderCounter.gd" id="1_counter"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_counter"]
albedo_color = Color(0.9, 0.6, 0.3, 1)
metallic = 0.3
roughness = 0.5

[sub_resource type="BoxMesh" id="BoxMesh_counter"]
material = SubResource("StandardMaterial3D_counter")
size = Vector3(3, 1, 0.8)

[sub_resource type="BoxShape3D" id="BoxShape3D_counter"]
size = Vector3(3, 1, 0.8)

[node name="OrderCounter" type="StaticBody3D"]
script = ExtResource("1_counter")

[node name="Visual" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_counter")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_counter")

[node name="OrderPosition" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.6)

[node name="QueueStart" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.5)
